# sorteio

./: .flake8  .gitignore  Makefile  README.md  database.db  dbinit.py  imports.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py  dbinit.py  draw.py  funcs.py  imports.py  models.py  routes.py
app/static/: bootstrap.css
app/templates/: draw.html  home.html  layout.html  results.html  year.html
json/: spaces.json  units.json
