[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Guilherme Parpinelli <guilheerme.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.27"
pdfplumber = "^0.5.28"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
